02-cognitive-services-security - Manage Cognitive Services Security

--- a/02-cognitive-security/C-Sharp/keyvault_client/appsettings.json
+++ b/02-cognitive-security/C-Sharp/keyvault_client/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "CognitiveServicesEndpoint": "YOUR_COGNITIVE_SERVICES_ENDPOINT",
-    "KeyVault": "YOUR_KEY_VAULT_NAME",
-    "TenantId": "YOUR_SERVICE_PRINCIPAL_TENANT_ID",
-    "AppId": "YOUR_SERVICE_PRINCIPAL_APP_ID",
-    "AppPassword": "YOUR_SERVICE_PRINCIPAL_PASSWORD"
+    "CognitiveServicesEndpoint": "https://cs-sachakr-demo.cognitiveservices.azure.com/",
+    "KeyVault": "kv-sachakr-demo",
+    "TenantId": "cb465b64-9800-4234-9824-3b41d0563b8a",
+    "AppId": "c0e668cc-19b2-45f5-8fe1-e87aa741cb42",
+    "AppPassword": "Hxo8Q~cio8k6TXgYr8ks-rtdtv~TJV5mW6ZTsc5v"
 }
