--- a/01-getting-started/C-Sharp/rest-client/appsettings.json
+++ b/01-getting-started/C-Sharp/rest-client/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "CognitiveServicesEndpoint": "https://cs-sachakr-demo.cognitiveservices.azure.com/",
-    "CognitiveServiceKey": "b17f2d6b2cf04b58ac9b6332cd9a4118"
+    "CognitiveServicesEndpoint": "YOUR_COGNITIVE_SERVICES_ENDPOINT",
+    "CognitiveServiceKey": "YOUR_COGNITIVE_SERVICES_KEY"
 }
